# multi_agent_system_demo

./: .gitignore  Procfile  README.md  mta.yaml  prometheus.yml  pyproject.toml  requests.http  requirements.txt  tempo.yml
mas_autogen/app/: server.py
mas_autogen/app/.cache/41/: cache.db
mas_autogen/app/agents/: agent_framework.py  finance_agent.py  finance_group_chat_agent.py  super_agent.py  weather_agent.py
mas_autogen/app/data/: balances.json  customer.json  customer_details.json  disputed_items.json  invoices.json
mas_autogen/app/functions/: finance_functions.py  weather_functions.py
mas_autogen/app/services/: agent_service.py  weather_service.py
mas_autogen/app/utils/: agent_observability.py  ai_core_config.py  aicoreclient.py  config.py  llm_config.py  prompt_config.py
observability/: OVERVIEW.md  otel-collector-config.yml
